Change metadata to streaming
Signed-off-by: Phillip Kruger <phillip.kruger@gmail.com>